--- a/Pepperbot/Pages/Discord.razor
+++ b/Pepperbot/Pages/Discord.razor
@@ -8,6 +8,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavManager.NavigateTo("https://discord.gg/g4fAXGKHrF");
+        NavManager.NavigateTo("https://discord.gg/x2u5E7KhJh");
     }
 }
