--- a/Pepperbot/Shared/NavMenu.razor
+++ b/Pepperbot/Shared/NavMenu.razor
@@ -1,8 +1,7 @@
 ﻿
 <div name="navigation" class="navigation">
-    <img src="icon.png" class="h-full" style="margin-top: 10px;">
+    <img src="https://turtlepaw.is-from.space/r/tws.png" class="h-full" style="margin-top: 10px;">
     <div class="nav-links text-white font-semibold">
         <a href="/discord" target="_blank" class="hover:underline cursor-pointer linkw">Discord</a>
-        <a href="/credit" target="_blank" class="hover:underline cursor-pointer linkw">Crediting</a>
     </div>
 </div>
