--- a/Pepperbot/wwwroot/css/custom.css
+++ b/Pepperbot/wwwroot/css/custom.css
@@ -41,7 +41,7 @@ code {
 }
 
 .top {
-    background: #5865F2;
+    background: #8ca15e;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
