--- a/Pepperbot/Pages/Index.razor
+++ b/Pepperbot/Pages/Index.razor
@@ -11,67 +11,19 @@
     <div class="pb-12 top">
         <NavMenu/>
         <div id="main" name="main" class="mt-10 text-white">
-            <h1 class="text-6xl font-bold align-middle">Icons Discord</h1>
-            <p class="font-normal text-lg">Welcome to Icons, where we have one of the best minimalistic, handcrafted, and beautiful Icons. We are known as the best source for icons & emotes on Discord.</p>
+            <h1 class="text-6xl font-bold align-middle">Turtlepaw's Workshop</h1>
+            <p class="font-normal text-lg">Devloping Discord bots since 2021. Join our Discord to learn more.</p>
             <h1 class="text-6xl opacity-20 transform -translate-y-5 font-bold mb-2 align-middle">
                 <span class="opacity-0">.</span>
             </h1>
         </div>
     </div>
-    <div class="flexlist">
-        @if (images != null)
-        {
-            @foreach (var img in images)
-            {
-                <div class="flexitem" @onclick="@(() => ShowPopup(img.name, img.type))">
-                    <center><img src="img/@(img.name + "." + img.type.ToLowerInvariant())" style="width: 60px;"/></center>
-                    <div class="IconListText">@img.name</div>
-                </div>
-            }
-        } else
-        {
-            <div class="spinner">
-                <div class="cube1"></div>
-                <div class="cube2"></div>
-            </div>
-        }
-
+    <div>
+        <br /><br />
+        <div style="display: inline-block; overflow: hidden; background-color: rgb(54, 57, 62); border-radius: 7px; vertical-align: top; height: 500px; width: 1000px;">
+            <iframe src="https://widgetbot.io/channels/834199640702320650/944396274365521981" title="Discord chat embed" style="width: 100%; height: 100%; border: none;"></iframe>
+        </div>
+        <br /><br />
+        <center><img src="https://invidget.switchblade.xyz/834199640702320650"/></center>
     </div>
-    
-    <Footer />
 </div>
-
-@code {
-    [CascadingParameter] public IModalService Modal { get; set; }
-
-    void ShowPopup(string name, string type)
-    {
-        var parameters = new ModalParameters();
-        parameters.Add(nameof(Icon.name), name);
-        parameters.Add(nameof(Icon.type), type);
-        var Options = new ModalOptions()
-        {
-            Class = "blazorModel"
-        };
-
-        Modal.Show<Icon>("", parameters, Options);
-    }
-
-    private ImgFile[] images { get; set; } = { };
-
-    public record ImgFile
-    {
-        public string name { get; set; }
-        public string type { get; set; }
-    }
-
-    private async Task GetFilesStartUp()
-    {
-        images = (await Http.GetFromJsonAsync<ImgFile[]>("img/data.json")).Where(i => i.type.ToLowerInvariant().EndsWith("png")).ToArray();
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        await GetFilesStartUp();
-    }
-}
