--- a/Pepperbot/Pages/Index.razor
+++ b/Pepperbot/Pages/Index.razor
@@ -11,7 +11,7 @@
     <div class="pb-12 top">
         <NavMenu/>
         <div id="main" name="main" class="mt-10 text-white">
-            <h1 class="text-6xl font-bold align-middle">Turtlepaw's Workshop</h1>
+            <h1 class="text-6xl font-bold align-middle txt">Turtlepaw's Workshop</h1>
             <p class="font-normal text-lg">Devloping Discord bots since 2021. Join our Discord to learn more.</p>
             <h1 class="text-6xl opacity-20 transform -translate-y-5 font-bold mb-2 align-middle">
                 <span class="opacity-0">.</span>
@@ -25,5 +25,16 @@
         </div>
         <br /><br />
         <center><img src="https://invidget.switchblade.xyz/834199640702320650"/></center>
+        <br /><br />
+        <div>
+            <h1 class="text-6xl font-bold align-middle txt">Projects</h1>
+            <br />
+            <a class="align-middle txt text-3xl"href="https://signal.trtle.xyz/">Signal</a>
+            <br />
+            <a class="align-middle txt text-3xl" href="https://tickets.trtle.xyz/">BetterTickets (Signal Plugin)</a>
+            <br />
+            <a class="align-middle txt text-3xl" href="https://slashr.xyz/">Discord Interactions</a>
+        </div>
+        <br /><br />
     </div>
 </div>
